--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ body {
 .front_wheel {
 	height: 56px;
 	width: 56px;
-	left: 857px;
+	left: 941px;
 	bottom: 15px;
 	position: absolute;
 	animation: wheel-rotation 1s linear 2s infinite;
@@ -393,7 +393,8 @@ body {
 .back_wheel {
 	height: 55px;
 	width: 55px;
-	left: 649px;
+	left: 735px;
+	right:45px;
 	bottom: 15px;
 	position: absolute;
 	animation: wheel-rotation 1s linear 2s infinite;
